--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -26,6 +26,7 @@
     "@nestjs/swagger": "^11.1.2",
     "@prisma/client": "6.6.0",
     "@scalar/nestjs-api-reference": "^0.4.7",
+    "argon2": "^0.41.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "reflect-metadata": "^0.2.2",
