--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -23,8 +23,10 @@
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tailwindcss/vite": "^4.1.4",
     "@tanstack/react-query": "^5.74.3",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.488.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
@@ -38,6 +40,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
