--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "books-sharing-platform",
+  "name": "books-sharing-platform-backend",
   "version": "0.0.1",
   "description": "",
   "author": "",
